# Tile-Game

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  TODO  main.py  pyproject.toml  requirements.txt  themes.json  tile-game.spec
.devcontainer/: tile-game.code-workspace
core/: catchncage.py  game.py  window.py
data/: catchncage.properties  data_manager.py  items.py  tiles.py
docs/: Doxyfile  Doxyfile-game  Doxyfile-tests  Makefile  conf.py  index.rst  requirements.txt
docs/docbook/: button_8py.xml  camera_8py.xml  checkbox_8py.xml  classcore_1_1game_1_1Game.xml  classcore_1_1window_1_1Window.xml  classdata_1_1items_1_1Item.xml  classdata_1_1items_1_1Items.xml  classdata_1_1tiles_1_1Tile.xml  classdata_1_1tiles_1_1TileTypes.xml  classdata_1_1tiles_1_1Tiles.xml  classentity_1_1player_1_1Player.xml  classgui_1_1button_1_1Button.xml  classgui_1_1checkbox_1_1Checkbox.xml  classgui_1_1progress__bar_1_1ProgressBar.xml  classgui_1_1screen__manager_1_1Screens.xml  classgui_1_1screens_1_1credits__screen_1_1CreditsScreen.xml  classgui_1_1screens_1_1screen_1_1Screen.xml  (+49 more)
entity/: animal.py  player.py
game/: __init__.py  __main__.py  conf.py  main.py
gui/: button.py  checkbox.py  horizontal_slider.py  hotbar.py  label.py  progress_bar.py  screen_manager.py  slot.py
server/: main.py
tests/: README.md  TESTS.md  test_assets.py  test_core.py  test_data.py  test_entity.py
tools/: gen_docs.py  remove_logs.py
utils/: exceptions.py  mouse.py  tools.py
world/: camera.py  map_manager.py  texture_manager.py  textures.py  tile_manager.py  tiles.py  world.py
(+4477 files in other folders)
