[project]
name = "game"
version = "0.0.1"
requires-python = ">=3.11"

dependencies = [
    "pygame==2.5.2",
    "crayons==0.4.0"
    # "numpy==1.26.4"
]

[project.optional-dependencies]
test_modules = [
    "pytest==8.1.1"
]

[build-system]
requires = [
    "setuptools>=66.1.1"
]
build-backend ="setuptools.build_meta"



