[tool.poetry]
name = "game"
version = "0.0.1"
description = "Untitled Game"
authors = ["SammygoodTunes"]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "2.5.2"
numpy = "^1.26.4"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"

[tools.poetry.scripts]
game = "game.__main__:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
